Add JNI validation and exception mapping (#6)

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <modules>
     <module>bundles/com.emmtrix.isl.core</module>
+    <module>bundles/com.emmtrix.isl.jni</module>
   </modules>
 
   <properties>
