Add p2 update site and feature

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <module>bundles/com.emmtrix.isl.native.win32.x86_64</module>
     <module>bundles/com.emmtrix.isl.native.linux.x86_64</module>
     <module>bundles/com.emmtrix.isl.native.macosx.aarch64</module>
+    <module>features/com.emmtrix.isl.feature</module>
+    <module>releng/com.emmtrix.isl.site</module>
   </modules>
 
   <properties>
@@ -22,11 +24,26 @@
     <maven.compiler.release>11</maven.compiler.release>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.bundle.plugin.version>5.1.9</maven.bundle.plugin.version>
+    <tycho.version>4.0.7</tycho.version>
   </properties>
 
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <extensions>true</extensions>
+      </plugin>
+    </plugins>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-maven-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <extensions>true</extensions>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
