Align OSGi bundle versions with release guidance (#12)

--- a/bundles/com.emmtrix.isl.jni/pom.xml
+++ b/bundles/com.emmtrix.isl.jni/pom.xml
@@ -25,7 +25,7 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Bundle-Version>${project.version}</Bundle-Version>
+            <Bundle-Version>${isl.osgi.version}</Bundle-Version>
           </instructions>
         </configuration>
       </plugin>
