--- a/bundles/com.emmtrix.isl.core/pom.xml
+++ b/bundles/com.emmtrix.isl.core/pom.xml
@@ -25,7 +25,7 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Bundle-Version>${project.version}</Bundle-Version>
+            <Bundle-Version>${isl.osgi.version}</Bundle-Version>
             <Export-Package>com.emmtrix.isl.core</Export-Package>
           </instructions>
         </configuration>
