--- a/bundles/com.emmtrix.isl.native.linux.x86_64/pom.xml
+++ b/bundles/com.emmtrix.isl.native.linux.x86_64/pom.xml
@@ -26,7 +26,7 @@
           <instructions>
             <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Bundle-Version>${project.version}</Bundle-Version>
+            <Bundle-Version>${isl.osgi.version}</Bundle-Version>
             <Fragment-Host>com.emmtrix.isl.jni</Fragment-Host>
             <Bundle-NativeCode>native/linux/x86_64/*;osname=linux;processor=x86_64</Bundle-NativeCode>
           </instructions>
