Fix native fragment POM plugin blocks (#15)

--- a/bundles/com.emmtrix.isl.native.linux.x86_64/pom.xml
+++ b/bundles/com.emmtrix.isl.native.linux.x86_64/pom.xml
@@ -27,6 +27,8 @@
             <phase>none</phase>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <version>${maven.bundle.plugin.version}</version>
